--- a/kankan/pages/main/products/commentlist.html
+++ b/kankan/pages/main/products/commentlist.html
@@ -146,6 +146,10 @@
 		<script src="../../../js/language.js"></script>
 		<script type="text/javascript">
 			mui.init();
+			window.addEventListener('ucid', function(event) {
+				var id = event.detail.id;
+				//alert(id);
+			});
 			$(function(){
 				//$("#allcommentlist").show();
 				$("#badcommentlist").hide();
