--- a/kankan/pages/main/products/pro_commentslist.html
+++ b/kankan/pages/main/products/pro_commentslist.html
@@ -51,10 +51,9 @@
 		<script src="../../../js/language.js"></script>
 		<script type="text/javascript">
 			mui.init();
-			//添加newId自定义事件监听
 			window.addEventListener('comid',function(event){
 			  var id = event.detail.id;
-			  alert(id);
+			  //alert(id);
 			});
 		</script>
 	</body>
