--- a/kankan/pages/login/reg.html
+++ b/kankan/pages/login/reg.html
@@ -214,7 +214,11 @@
 						params[Api.Params.rCode] = doc.getElementById('introduction-code').value.trim();
 						Repository.User.register(params, {
 							ok: function(data) {
-								Log.i("注册成功")
+								Log.i("注册成功");
+								mui.openWindow({
+									id:'login',
+									url:'login.html'
+								});
 							},
 							ng: function(data) {
 								Log.i("注册失败")
@@ -223,8 +227,8 @@
 					});
 
 					// address logic
-					let cityPickerBtn = doc.getElementById('showCityPicker');
-					let cityPicker = new mui.PopPicker({
+					var cityPickerBtn = doc.getElementById('showCityPicker');
+					var cityPicker = new mui.PopPicker({
 						layer: 2
 					});
 					cityPicker.setData(cityData);
