--- a/kankan/pages/main/products/productslist.html
+++ b/kankan/pages/main/products/productslist.html
@@ -21,7 +21,7 @@
 					<div class="ka_userbox">
 						<img src="" class="ka_touxiangimg" width="50" height="50" />
 						<div><b class="uname"></b></div>
-						<font color="#808080" size="2"><span class="lang" date-locale="det_coments"></span>:
+						<font color="#808080" size="2"><span class="lang" data-locale="det_coments"></span>:
 							<font color="#007AFF" class="ucomment"></font>&nbsp;&nbsp;&nbsp;
 							<span class="lang" data-locale="det_producednum"></span>:
 							<font color="#007AFF" class="uproducts"></font>
@@ -30,7 +30,7 @@
 				</li>
 				<li class="mui-table-view-cell commentlist">
 					<a href="commentlist.html">
-						<div class="mui-navigate-right ka_userbox">
+						<div class="mui-navigate-right ka_userbox commentlists">
 							<div class="mui-pull-right ka_commentlevelbox">
 								<img src="../../../images/Good.PNG" width="30" height="30">
 								<div class="ka_comlevnumber goodnum"></div>
