--- a/kankan/pages/main/main.html
+++ b/kankan/pages/main/main.html
@@ -40,14 +40,14 @@
 		<script type="text/javascript" src="../../js/jquery-3.2.0.min.js"></script>
 		<script type="text/javascript" src="../../js/language.js"></script>
 		<script type="text/javascript" charset="utf-8">
-			if(!mui.os.android) {
-				//The overall slide temporarily support android phone, because the two pages of mobile animation, can not guarantee synchronization;
-				document.getElementById("move-togger").classList.remove('mui-hidden');
-				var spans = document.querySelectorAll('.android-only');
-				for(var i = 0, len = spans.length; i < len; i++) {
-					spans[i].style.display = "none";
-				}
-			}
+//			if(!mui.os.android) {
+//				//The overall slide temporarily support android phone, because the two pages of mobile animation, can not guarantee synchronization;
+//				document.getElementById("move-togger").classList.remove('mui-hidden');
+//				var spans = document.querySelectorAll('.android-only');
+//				for(var i = 0, len = spans.length; i < len; i++) {
+//					spans[i].style.display = "none";
+//				}
+//			}
 			//mui initialization
 			mui.init({
 				swipeBack: false
