--- a/kankan/pages/main/products/commentlist.html
+++ b/kankan/pages/main/products/commentlist.html
@@ -18,143 +18,71 @@
 		<div class="mui-content ka_mainbox">
 			<ul class="mui-table-view">
 			        <li class="mui-table-view-cell">
-			            <div class="mui-pull-left ka_commentsort lang" data-locale="det_all">全部</div>
+			            <div class="mui-pull-left ka_commentsort lang" data-locale="det_all"></div>
 			            <div class="ka_userbox">
 				            <div id="goodcomment">
 				            	<img src="../../../images/Good.PNG" width="30" height="30" />
-				            	<div class="ka_commentfonts lang" data-locale="det_goodcomments">好评</div>
-				            	<div class="ka_commentnum">500</div>
+				            	<div class="ka_commentfonts lang" data-locale="det_goodcomments"></div>
+				            	<div class="ka_commentnum">0</div>
 				             </div>
 				             <div id="normalcomment">
 				            	<img src="../../../images/Normal.PNG" width="30" height="30"/>
-				            	<div class="ka_commentfonts lang" date-locale="det_normalcomments">中评</div>
-				            	<div class="ka_commentnum">20</div>
+				            	<div class="ka_commentfonts lang" data-locale="det_normalcomments"></div>
+				            	<div class="ka_commentnum">0</div>
 				             </div>
 				             <div id="badcomment">
 				            	<img src="../../../images/Bad.PNG" width="30" height="30"/>
-				            	<div class="ka_commentfonts lang" data-locale="det_badcomments">差评</div>
-				            	<div class="ka_commentnum">500</div>
+				            	<div class="ka_commentfonts lang" data-locale="det_badcomments"></div>
+				            	<div class="ka_commentnum">0</div>
 				             </div>
 			            </div>
 			        </li>
 			        <li class="mui-table-view-cell" id="badcommentlist">
-			           <div class="mui-pull-left">
-			           	<img src="../../../images/yuantiao.jpg" width="40" height="40" class="ka_touxiangimg" />
-			           	<div class="ka_userbox"><b>muiu</b></div>
-			           </div>
-			           <div class="mui-pull-left ka_commentinfobox">
-			           	shdfjshfjskdhfkjd ahsdjkahsdjk ashjkdhasjkd asdkhasjkdhasjkd sadhjkashdjk ashjkdhkasdj 
-			           	ashdjkasdh ashjkdhasd 中文的大小好像太大了dfj sdjfklsdjf jksdlfj jsdklfj jklsdfjsdklfjsdfjs jsdklfj
-				           	<div class="ka_commenttime">
-				           		<span class="mui-icon-extra mui-icon-extra-outline ka_cpmmenttimicon"></span> 
-				           		2 天前
-				           	</div>
-				           	<div class="ka_commentinfolev">
-				           		<img src="../../../images/Bad.PNG" width="20" height="20" />
-				           	</div>
-			           	</div>
-			           	<!-----first end------->
-			           	<div class="mui-pull-left">
-			           	<img src="../../../images/yuantiao.jpg" width="40" height="40" class="ka_touxiangimg" />
-			           	<div class="ka_userbox"><b>muiu</b></div>
-			           </div>
-			           <div class="mui-pull-left ka_commentinfobox">
-			           	shdfjshfjskdhfkjd ahsdjkahsdjk ashjkdhasjkd asdkhasjkdhasjkd sadhjkashdjk ashjkdhkasdj 
-			           	ashdjkasdh ashjkdhasd 中文的大小好像太大了dfj sdjfklsdjf jksdlfj jsdklfj jklsdfjsdklfjsdfjs jsdklfj
-				           	<div class="ka_commenttime">
-				           		<span class="mui-icon-extra mui-icon-extra-outline ka_cpmmenttimicon"></span> 
-				           		2 天前
-				           	</div>
-				           	<div class="ka_commentinfolev">
-				           		<img src="../../../images/Bad.PNG" width="20" height="20" />
-				           	</div>
-			           	</div>
 			        </li>
 			        <li class="mui-table-view-cell" id="goodcommentlist">
-			             <div class="mui-pull-left">
-			           	<img src="../../../images/shuijiao.jpg" width="40" height="40" class="ka_touxiangimg" />
-			           	<div class="ka_userbox"><b>muiu</b></div>
-			           </div>
-			           <div class="mui-pull-left ka_commentinfobox">
-			           	shdfjshfjskdhfkjd ahsdjkahsdjk ashjkdhasjkd asdkhasjkdhasjkd sadhjkashdjk ashjkdhkasdj 
-			           	ashdjkasdh ashjkdhasd 中文的大小好像太大了dfj sdjfklsdjf jksdlfj jsdklfj jklsdfjsdklfjsdfjs jsdklfj
-				           	<div class="ka_commenttime">
-				           		<span class="mui-icon-extra mui-icon-extra-outline ka_cpmmenttimicon"></span> 
-				           		3 天前
-				           	</div>
-				           	<div class="ka_commentinfolev">
-				           		<img src="../../../images/Good.PNG" width="20" height="20" />
-				           	</div>
-			           	</div>
-			           	<!-----first end----->
 			        </li>
 			        <li class="mui-table-view-cell" id="normalcommentlist">
-			             <div class="mui-pull-left">
-			           	<img src="../../../images/muwu.jpg" width="40" height="40" class="ka_touxiangimg" />
-			           	<div class="ka_userbox"><b>muiu</b></div>
-			           </div>
-			           <div class="mui-pull-left ka_commentinfobox">
-			           	shdfjshfjskdhfkjd ahsdjkahsdjk ashjkdhasjkd asdkhasjkdhasjkd sadhjkashdjk ashjkdhkasdj 
-			           	ashdjkasdh ashjkdhasd 中文的大小好像太大了dfj sdjfklsdjf jksdlfj jsdklfj jklsdfjsdklfjsdfjs jsdklfj
-				           	<div class="ka_commenttime">
-				           		<span class="mui-icon-extra mui-icon-extra-outline ka_cpmmenttimicon"></span> 
-				           		1 天前
-				           	</div>
-				           	<div class="ka_commentinfolev">
-				           		<img src="../../../images/Normal.PNG" width="20" height="20" />
-				           	</div>
-			           	</div>
-			           	<!-----first end----->
 			        </li>
 			         <li class="mui-table-view-cell" id="allcommentlist">
-			             <div class="mui-pull-left">
-			           	<img src="../../../images/muwu.jpg" width="40" height="40" class="ka_touxiangimg" />
-			           	<div class="ka_userbox"><b>muiu</b></div>
+			         	<!--<div class="mui-pull-left ka_userbox">
+			           	<img src="../../../images/yuantiao.jpg" width="40" height="40" class="ka_touxiangimg" />
+			           	<div class="ka_userbox ka_userboxtext"><b>muiusdfdsfsdfsdfsdfsdf</b></div>
 			           </div>
 			           <div class="mui-pull-left ka_commentinfobox">
 			           	shdfjshfjskdhfkjd ahsdjkahsdjk ashjkdhasjkd asdkhasjkdhasjkd sadhjkashdjk ashjkdhkasdj 
 			           	ashdjkasdh ashjkdhasd 中文的大小好像太大了dfj sdjfklsdjf jksdlfj jsdklfj jklsdfjsdklfjsdfjs jsdklfj
 				           	<div class="ka_commenttime">
 				           		<span class="mui-icon-extra mui-icon-extra-outline ka_cpmmenttimicon"></span> 
-				           		1 天前
+				           		2 天前
 				           	</div>
 				           	<div class="ka_commentinfolev">
-				           		<img src="../../../images/Normal.PNG" width="20" height="20" />
+				           		<img src="../../../images/Bad.PNG" width="20" height="20" />
 				           	</div>
 			           	</div>
-			           	<!-----first end----->
-			           	<div class="mui-pull-left">
-			           	<img src="../../../images/muwu.jpg" width="40" height="40" class="ka_touxiangimg" />
-			           	<div class="ka_userbox"><b>muiu</b></div>
-			           </div>
-			           <div class="mui-pull-left ka_commentinfobox">
-			           	shdfjshfjskdhfkjd ahsdjkahsdjk ashjkdhasjkd asdkhasjkdhasjkd sadhjkashdjk ashjkdhkasdj 
-			           	ashdjkasdh ashjkdhasd 中文的大小好像太大了dfj sdjfklsdjf jksdlfj jsdklfj jklsdfjsdklfjsdfjs jsdklfj
-				           	<div class="ka_commenttime">
-				           		<span class="mui-icon-extra mui-icon-extra-outline ka_cpmmenttimicon"></span> 
-				           		1 天前
-				           	</div>
-				           	<div class="ka_commentinfolev">
-				           		<img src="../../../images/Good.PNG" width="20" height="20" />
-				           	</div>
-			           	</div>
-			        </li>
+			        </li>-->
 			    </ul>
+			    
 		</div>
 		<script src="../../../js/mui.min.js"></script>
 		<script src="../../../js/jquery-3.2.0.min.js"></script>
 		<script src="../../../js/language.js"></script>
+		<script src="../../../js/sha256.js"></script>
+		<script src="../../../js/common.js"></script>
 		<script type="text/javascript">
 			mui.init();
 			window.addEventListener('ucid', function(event) {
 				var id = event.detail.id;
 				//alert(id);
+				showcomments(id);
+			});
+			mui.plusReady(function() {
+				TextMessage.language = plus.os.language;
 			});
 			$(function(){
-				//$("#allcommentlist").show();
 				$("#badcommentlist").hide();
 				$("#normalcommentlist").hide();
 				$("#goodcommentlist").hide();
+				$(".ka_commentsort").html(TextMessage.allshowmes);
 			});
 			$("#normalcomment").click(
 				function(){
@@ -162,7 +90,7 @@
 					$("#normalcommentlist").show();
 					$("#goodcommentlist").hide();
 					$("#allcommentlist").hide();
-					$(".ka_commentsort").attr("data-locale","det_normalcomments");
+					$(".ka_commentsort").html(TextMessage.normalshowmes);
 					$(".ka_commentfonts").removeClass("ka_clickcs");
 					$("#normalcomment .ka_commentfonts").addClass("ka_clickcs");
 				}
@@ -173,7 +101,7 @@
 					$("#normalcommentlist").hide();
 					$("#goodcommentlist").hide();
 					$("#allcommentlist").hide();
-					$(".ka_commentsort").attr("data-locale","det_badcomments");
+					$(".ka_commentsort").html(TextMessage.badshowmes);
 					$(".ka_commentfonts").removeClass("ka_clickcs");
 					$("#badcomment .ka_commentfonts").addClass("ka_clickcs");
 				}
@@ -184,11 +112,78 @@
 					$("#badcommentlist").hide();
 					$("#normalcommentlist").hide();
 					$("#allcommentlist").hide();
-					$(".ka_commentsort").attr("data-locale","det_goodcomments");
+					$(".ka_commentsort").html(TextMessage.goodshowmes);
 					$(".ka_commentfonts").removeClass("ka_clickcs");
 					$("#goodcomment .ka_commentfonts").addClass("ka_clickcs");
 				}
 			);
+			function showcomments(uid){
+				var params = {
+					"user_id":uid,
+					"user_comm_flag":""
+				};
+				Repository.Commodity.Usercomment(params, {
+					ok: function(data) {
+						Log.d("success");
+						showall(data);
+					},
+					ng: function(data) {
+						Log.d(data);
+					}
+				});
+			}
+			function showall(results){
+				var datas=results.data;
+				var goodcount=datas.user_opinion_h_count;
+				var normalcount=datas.user_opinion_m_count;
+				var badcount=datas.user_opinion_l_count;
+				//console.log(goodcount);
+				$("#goodcomment .ka_commentnum").html(goodcount);
+				$("#normalcomment .ka_commentnum").html(goodcount);
+				$("#badcomment .ka_commentnum").html(goodcount);
+				var comment_detailarr = datas.comment_detail;
+				var commentlength = comment_detailarr.length;
+				for(var i=0;i<commentlength;i++){
+					var comentobj = JSON.stringify(comment_detailarr[i]);
+					var comentinfo = $.parseJSON(comentobj);
+					var comentinfoimg=comentinfo.user_photo;
+					var comentinfoname=comentinfo.user_name;
+					var comentinfotime=comentinfo.ins_date;
+					var comentinfoflag=comentinfo.user_comm_flag;
+					var comentinfodetail=comentinfo.user_comm_detail;
+					console.log("comentinfoimg:"+comentinfoimg+"comentinfoname:"+comentinfoname+"comentinfotime:"+comentinfotime+"comentinfoflag:"+comentinfoflag);
+					var html = new Util.StringBuilder();
+					html.append('<div class="mui-pull-left ka_userbox">')
+						.appendFormat('<img src="{0}" width="40" height="40" class="ka_touxiangimg" />',comentinfoimg)
+						.appendFormat('<div class="ka_userbox ka_userboxtext"><b>{0}</b></div>', comentinfoname)
+						.append('</div>')
+						.append('<div class="mui-pull-left ka_commentinfobox">')
+						.appendFormat('{0}',comentinfodetail)
+						.append('<div class="ka_commenttime">')
+						.append('<span class="mui-icon-extra mui-icon-extra-outline ka_cpmmenttimicon"></span>')
+						.appendFormat('{0}',comentinfotime)
+						.append('</div><div class="ka_commentinfolev">');
+						if(comentinfoflag=="0"){
+							html.append('<img src="../../../images/Good.PNG" width="20" height="20" />')
+						}else if(comentinfoflag=="1"){
+							html.append('<img src="../../../images/Normal.PNG" width="20" height="20" />')
+						}else if(comentinfoflag=="2"){
+							html.append('<img src="../../../images/Bad.PNG" width="20" height="20" />')
+						}
+						html.append('</div></div>')
+						.append('<!-----end----->');	
+					$("#allcommentlist").append(html.toString());
+					if(comentinfoflag=="0"){
+						$("#goodcommentlist").append(html.toString());
+					}
+					if(comentinfoflag=="1"){
+						$("#normalcommentlist").append(html.toString());
+					}
+					if(comentinfoflag=="2"){
+						$("#badcommentlist").append(html.toString());
+					}
+				}
+			}
 		</script>
 	</body>
 
