修改多语言对应在ios设备上的问题

--- a/kankan/pages/main/pullrefresh_with_tab.html
+++ b/kankan/pages/main/pullrefresh_with_tab.html
@@ -189,6 +189,10 @@
 							},
 							ng: function(data) {
 								Log.e(data);
+							},
+							error: function(){
+								self.endPullDownToRefresh();
+								self.endPullUpToRefresh();
 							}
 						}).then(function() {
 							var ul = self.element.querySelector('.mui-table-view');
