--- a/kankan/pages/main/products/commentlist.html
+++ b/kankan/pages/main/products/commentlist.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>commentlist</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../../../css/icons-extra.css" />
@@ -61,7 +61,6 @@
 			           	</div>
 			        </li>-->
 			    </ul>
-			    
 		</div>
 		<script src="../../../js/mui.min.js"></script>
 		<script src="../../../js/jquery-3.2.0.min.js"></script>
@@ -129,10 +128,22 @@
 					},
 					ng: function(data) {
 						Log.d(data);
+						emptycontent();
+						if(data=="2001"){
+							//alert(TextMessage.datanull);
+							$("ul").hide();
+						}
 					}
 				});
 			}
+			function emptycontent(){
+				$("#allcommentlist").empty();
+				$("#normalcommentlist").empty();
+				$("#goodcommentlist").empty();
+				$("#badcommentlist").empty();
+			}
 			function showall(results){
+				emptycontent();
 				var datas=results.data;
 				var goodcount=datas.user_opinion_h_count;
 				var normalcount=datas.user_opinion_m_count;
@@ -143,6 +154,7 @@
 				$("#badcomment .ka_commentnum").html(goodcount);
 				var comment_detailarr = datas.comment_detail;
 				var commentlength = comment_detailarr.length;
+				//var html="";
 				for(var i=0;i<commentlength;i++){
 					var comentobj = JSON.stringify(comment_detailarr[i]);
 					var comentinfo = $.parseJSON(comentobj);
@@ -151,7 +163,7 @@
 					var comentinfotime=comentinfo.ins_date;
 					var comentinfoflag=comentinfo.user_comm_flag;
 					var comentinfodetail=comentinfo.user_comm_detail;
-					console.log("comentinfoimg:"+comentinfoimg+"comentinfoname:"+comentinfoname+"comentinfotime:"+comentinfotime+"comentinfoflag:"+comentinfoflag);
+					//console.log("comentinfoimg:"+comentinfoimg+"comentinfoname:"+comentinfoname+"comentinfotime:"+comentinfotime+"comentinfoflag:"+comentinfoflag);
 					var html = new Util.StringBuilder();
 					html.append('<div class="mui-pull-left ka_userbox">')
 						.appendFormat('<img src="{0}" width="40" height="40" class="ka_touxiangimg" />',comentinfoimg)
@@ -171,17 +183,22 @@
 							html.append('<img src="../../../images/Bad.PNG" width="20" height="20" />')
 						}
 						html.append('</div></div>')
-						.append('<!-----end----->');	
+						.append('<!-----end----->');
 					$("#allcommentlist").append(html.toString());
+					//html.clear();
 					if(comentinfoflag=="0"){
 						$("#goodcommentlist").append(html.toString());
+						//html.clear();
 					}
 					if(comentinfoflag=="1"){
 						$("#normalcommentlist").append(html.toString());
+						//html.clear();
 					}
 					if(comentinfoflag=="2"){
 						$("#badcommentlist").append(html.toString());
+						//html.clear();
 					}
+					
 				}
 			}
 		</script>
