--- a/kankan/pages/main/products/pro_commentslist.html
+++ b/kankan/pages/main/products/pro_commentslist.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>pro_commentslist</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../../../css/icons-extra.css" />
@@ -17,8 +17,9 @@
 		</header>
 		<div class="mui-content ka_mainbox">
 			<ul class="mui-table-view">
-			         <li class="mui-table-view-cell ka_userbox" id="allcommentlist">
-			             <div class="mui-pull-left">
+				<li class="mui-table-view-cell ka_userbox" id="comments">
+					<p id="null" class="lang" data-locale="comdity_null" style="display: none;"></p>
+					<!--<div class="mui-pull-left">
 			           	<img src="../../../images/muwu.jpg" width="40" height="40" class="ka_touxiangimg" />
 			           	<div class="ka_userbox ka_userboxtext"><b>muiu</b></div>
 			           </div>
@@ -29,22 +30,18 @@
 				           		<span class="mui-icon-extra mui-icon-extra-outline ka_cpmmenttimicon"></span> 
 				           		1 天前
 				           	</div>
-			           	</div>
-			           	<!-----first end----->
-			           	<div class="mui-pull-left">
-			           	<img src="../../../images/muwu.jpg" width="40" height="40" class="ka_touxiangimg" />
-			           	<div class="ka_userbox ka_userboxtext"><b>muiu</b></div>
-			           </div>
-			           <div class="mui-pull-left ka_commentinfobox">
-			           	shdfjshfjskdhfkjd ahsdjkahsdjk ashjkdhasjkd asdkhasjkdhasjkd sadhjkashdjk ashjkdhkasdj 
-			           	ashdjkasdh ashjkdhasd 中文的大小好像太大了dfj sdjfklsdjf jksdlfj jsdklfj jklsdfjsdklfjsdfjs jsdklfj
-				           	<div class="ka_commenttime mui-pull-left">
-				           		<span class="mui-icon-extra mui-icon-extra-outline ka_cpmmenttimicon"></span> 
-				           		1 天前
-				           	</div>
-			           	</div>
-			        </li>
-			    </ul>
+			           	</div>-->
+				</li>
+			</ul>
+		</div>
+		<div>
+			<nav class="mui-bar mui-bar-tab">
+			<div class="ka_sendmesbox ka_userbox">
+				<textarea type="text" class="ka_sendcontent lang" data-locale="contentlength" maxlength="300"  rows="1"></textarea>
+				<button type="submit" class="mui-btn ka_sendbutton lang"  data-locale="contentsend"></button>
+			</div>
+			</nav>
+
 		</div>
 		<script src="../../../js/mui.min.js"></script>
 		<script src="../../../js/jquery-3.2.0.min.js"></script>
@@ -53,12 +50,12 @@
 		<script src="../../../js/common.js"></script>
 		<script type="text/javascript">
 			mui.init();
-			window.addEventListener('comid',function(event){
-			  var id = event.detail.id;
-			  //alert(id);
-			  getccomments(id);
+			window.addEventListener('comid', function(event) {
+				var id = event.detail.id;
+				getccomments(id);
 			});
-			function getccomments(rid){
+
+			function getccomments(rid) {
 				var params = {
 					"commodity_id": "100006"
 				};
@@ -69,20 +66,36 @@
 					},
 					ng: function(data) {
 						Log.d(data);
+						if(data == "2001") {
+							$("#null").show();
+						}
 					}
 				});
 			}
-			function showpcomehts(results){
-				var datas=results.data;
-				var dataslengh=datas.length;
-				for(var i=0;i<dataslengh;i++){
-					var pcommentobj = JSON.stringify(datas[j]);
+
+			function showpcomehts(results) {
+				$("#comments").empty();
+				var datas = results.data;
+				var dataslengh = datas.length;
+				for(var i = 0; i < dataslengh; i++) {
+					var pcommentobj = JSON.stringify(datas[i]);
 					var pcommentinfo = $.parseJSON(pcommentobj);
-					var headimg=pcommentinfo.user_photo;
-					var uname=pcommentinfo.user_name;
-					var content=pcommentinfo.leave_msg_detail;
-					var time=pcommentinfo.ins_date;
-					console.log(content);
+					var headimg = pcommentinfo.user_photo;
+					var uname = pcommentinfo.user_name;
+					var content = pcommentinfo.leave_msg_detail;
+					var time = pcommentinfo.ins_date;
+					var html = new Util.StringBuilder();
+					html.append('<div class="comtent"><div class="mui-pull-left">')
+						.appendFormat('<img src="{0}" width="40" height="40" class="ka_touxiangimg" />', headimg)
+						.appendFormat('<div class="ka_userbox ka_userboxtext"><b>{0}</b></div>', uname)
+						.append('</div>')
+						.append('<div class="mui-pull-left ka_commentinfobox">')
+						.appendFormat('{0}', content)
+						.append('<div class="ka_commenttime">')
+						.append('<span class="mui-icon-extra mui-icon-extra-outline ka_cpmmenttimicon"></span>')
+						.appendFormat('{0}', time)
+						.append('</div></div></div>');
+					$("#comments").append(html.toString());
 				}
 			}
 		</script>
