登录注册页面字体大小调整

--- a/kankan/pages/login/reg.html
+++ b/kankan/pages/login/reg.html
@@ -85,6 +85,14 @@
 				padding: 20px 10px;
 				font-size: 16px;
 			}
+			
+			#regForm label {
+				font-size: 75%;
+			}
+			
+			#regForm input {
+				font-size: 67%;
+			}
 		</style>
 	</head>
 
