--- a/kankan/pages/login/login.html
+++ b/kankan/pages/login/login.html
@@ -40,6 +40,14 @@
 				margin-top: 30px;
 			}
 			
+			#email-login-form label {
+				font-size: smaller;
+			}
+			
+			#email-login-form input {
+				font-size: 67%;
+			}
+			
 			.app-icons {
 				width: 10%;
 				float: left;
