详情页改修和文言更新

--- a/kankan/pages/main/products/detail.html
+++ b/kankan/pages/main/products/detail.html
@@ -272,6 +272,7 @@
 			}
 			//message show
 			function messageshow(results) {
+				$(".mui-slider-indicator").empty();
 				var commodity = results.data;
 				var comdbasic = commodity.commodity_basic;
 				var comdname = comdbasic[0].comm_name;
