--- a/kankan/pages/main/pullrefresh_with_tab.html
+++ b/kankan/pages/main/pullrefresh_with_tab.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>pullrefresh_with_tab</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -95,6 +95,59 @@
 			.mui-slider-indicator.mui-segmented-control {
 				background-color: #efeff4;
 			}
+			
+			.spinner {
+				margin: 100px auto 0;
+				width: 150px;
+				text-align: center;
+			}
+			
+			.spinner>div {
+				width: 30px;
+				height: 30px;
+				background-color: #1E90FF;
+				border-radius: 100%;
+				display: inline-block;
+				-webkit-animation: bouncedelay 1.4s infinite ease-in-out;
+				animation: bouncedelay 1.4s infinite ease-in-out;
+				/* Prevent first frame from flickering when animation starts */
+				-webkit-animation-fill-mode: both;
+				animation-fill-mode: both;
+			}
+			
+			.spinner .bounce1 {
+				-webkit-animation-delay: -0.32s;
+				animation-delay: -0.32s;
+			}
+			
+			.spinner .bounce2 {
+				-webkit-animation-delay: -0.16s;
+				animation-delay: -0.16s;
+			}
+			
+			@-webkit-keyframes bouncedelay {
+				0%,
+				80%,
+				100% {
+					-webkit-transform: scale(0.0)
+				}
+				40% {
+					-webkit-transform: scale(1.0)
+				}
+			}
+			
+			@keyframes bouncedelay {
+				0%,
+				80%,
+				100% {
+					transform: scale(0.0);
+					-webkit-transform: scale(0.0);
+				}
+				40% {
+					transform: scale(1.0);
+					-webkit-transform: scale(1.0);
+				}
+			}
 		</style>
 	</head>
 
@@ -106,6 +159,11 @@
 					</div>
 				</div>
 				<div class="mui-slider-group">
+				</div>
+				<div class="spinner">
+					<div class="bounce1"></div>
+					<div class="bounce2"></div>
+					<div class="bounce3"></div>
 				</div>
 			</div>
 		</div>
@@ -155,6 +213,7 @@
 								Log.e("category ng");
 							}
 						}).then(function() {
+							createFragment(null, true);
 							mui.each(document.querySelectorAll('.mui-slider-group .mui-scroll'), function(index, pullRefreshEl) {
 								mui(pullRefreshEl).pullToRefresh({
 									down: {
@@ -190,13 +249,20 @@
 							ng: function(data) {
 								Log.e(data);
 							},
-							error: function(){
-								self.endPullDownToRefresh();
-								self.endPullUpToRefresh();
+							error: function() {
+								if(self != null) {
+									self.endPullDownToRefresh();
+									self.endPullUpToRefresh();
+								}
 							}
 						}).then(function() {
-							var ul = self.element.querySelector('.mui-table-view');
-							var length = ul.querySelectorAll('li').length;
+							var ul;
+							if(self != null) {
+								ul = self.element.querySelector('.mui-table-view');
+							} else {
+								ul = document.querySelectorAll('.mui-slider-group .mui-scroll .mui-table-view')[0];
+								Log.i(ul);
+							}
 							var fragment = document.createDocumentFragment();
 							var li;
 							for(var i = 0; i < commodityArray.length; i++) {
@@ -209,7 +275,7 @@
 									.append('</a>')
 									.appendFormat('<div class="kankan_area">{0}</div>', commodityArray[i].classes)
 									.append('<div class="mui-pull-left ka_mony">')
-									.appendFormat('<div>{0}<font color="#000000"> P</font></div>', commodityArray[i].price)
+									.appendFormat('<div>{0}<font color="#000000"> P</font></div>', commodityArray[i].price == "" ? 0 : commodityArray[i].price)
 									.append('</div>')
 									.append('<div class="mui-pull-right ka_heartlocation">')
 									.append('<span class="mui-icon-extra mui-icon-extra-heart-filled ka_heartgrey" onclick="good(this)"></span>')
@@ -220,12 +286,17 @@
 							}
 							if(isDown) {
 								ul.insertBefore(fragment, ul.firstChild);
-								self.endPullDownToRefresh();
+								if(self != null) {
+									self.endPullDownToRefresh();
+								}
+
 							} else {
 								ul.appendChild(fragment);
-								self.endPullUpToRefresh();
+								if(self != null) {
+									self.endPullUpToRefresh();
+								}
 							}
-
+							$('.spinner').css('display', 'none');
 							var detailPage = null;
 
 							mui(".mui-table-view").on('tap', 'a', function() {
