--- a/kankan/pages/login/login.html
+++ b/kankan/pages/login/login.html
@@ -144,10 +144,15 @@
 							auths[service.id] = service;
 							if(~authBtns.indexOf(service.id)) {
 								var isInstalled = app.isInstalled(service.id);
+								var isDisable = (!isInstalled && service.id === 'weixin') ? 'disabled' : '';
 							}
 						}
-						$(oauthArea).on('click', '.oauth-btn', function() {
-							if(this.classList.contains('disabled')) {
+						if (isDisable === 'disabled') {
+							doc.getElementsByClassName('oauth-btn')[0].setAttribute('data-able', 'disabled');
+						}
+						$(oauthArea).on('tap', '.oauth-btn', function() {
+							Log.i("oauthArea click");
+							if(this.getAttribute('data-able')) {
 								plus.nativeUI.toast(TextMessage.wechat_not_install);
 								return;
 							}
@@ -160,7 +165,7 @@
 									var params = {};
 									params[Api.Params.loginType] = LOGIN_TYPE.OAUTH;
 									params[Api.Params.nickName] = auth.userInfo.nickname;
-									params[Api.Params.openId] = auth.userinfo.openid;
+									params[Api.Params.openId] = auth.userInfo.openid;
 									params[Api.Params.headimgUrl] = auth.userInfo.headimgurl;
 									Repository.User.login(params, {
 										ok: function(data) {
@@ -169,10 +174,10 @@
 											});
 										},
 										ng: function(data) {
+											Log.e(data);
 										}
 									});
-								}, function(e) {
-								});
+								}, function(e) {});
 							}, function(e) {
 								waiting.close();
 							});
